--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,28 @@
 {
-    "extends": "airbnb-base",
     "env": {
-      "es6": true,
-      "browser": true,
-      "jest": true
+        "browser": true,
+        "es2021": true,
+        "jest": true
+    },
+    "extends": "airbnb-base",
+    "parserOptions": {
+        "ecmaVersion": "latest",
+        "sourceType": "module"
     },
     "rules": {
-      "no-restricted-syntax": [
-        "error",
-        "LabeledStatement",
-        "WithStatement"
-      ]
+        "no-restricted-syntax": [
+            "error",
+            "LabeledStatement",
+            "WithStatement"
+        ],
+        "import/extensions": [
+            "error",
+            "ignorePackages",
+            {
+              "js": "always"
+            }
+        ],
+        "linebreak-style": 0,
+        "indent": 0
     }
-  }
+}
