--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@babel/preset-env": "^7.26.0",
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.2.1",
+    "css-loader": "^7.1.2",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.31.0",
+    "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
     "mini-css-extract-plugin": "^2.9.2",
@@ -38,6 +40,7 @@
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.17.0",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
+    "core-js": "^3.39.0",
     "globals": "^15.13.0"
   }
 }
